--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 facenet-pytorch==2.6.0
 scikit-learn==1.8.0
 pandas==2.3.3
-matplotlib
-flask
-gunicorn
+matplotlib==3.10.8
+flask==3.1.2
+gunicorn==23.0.0
+gradio==6.3.0
